docs[website]: 🖤 Fix the accent color in dark mode (#581)

--- a/docs/assets/css/colors.css
+++ b/docs/assets/css/colors.css
@@ -3,5 +3,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
+    :root {
         --brand-color: #FB6666;
+    }
 }
